--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   shelf_router: ^1.1.0
   args: ^2.4.0
   http: ^1.1.0
+  flutter_typeahead: ^5.0.2
+  fl_chart: ^0.66.1
 
 dev_dependencies:
   flutter_test:
